--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 MONGO_URI=mongodb+srv://smakena74:Qujo5xJs7w77aEV5@cluster0.3fuom7z.mongodb.net/products?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
+# JWT_SECRET=your_jwt_secret
+# CLOUDINARY_URL=cloudinary://your_cloud_name:your_api_key:your_api_secret
+# CLOUDINARY_API_KEY=your_cloudinary_api_key
+# CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+# CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+# CLOUDINARY_UPLOAD_PRESET=your_upload_preset
+# EMAIL_SERVICE=your_email_service                                                                                
